[package]
name = "next-build-test"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2021"
autobenches = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
futures-util = "0.3.30"
next-api = { workspace = true }
next-core = { workspace = true }
num_cpus = "1.16.0"
rand = { workspace = true, features = ["small_rng"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-subscriber = "0.3"
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-malloc = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-cli-utils = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-runtime = { workspace = true }
turbopack-env = { workspace = true }
turbopack-node = { workspace = true }
turbopack-nodejs = { workspace = true }
turbopack-trace-utils = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
