[package]
name = "next-build"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
next-core = { workspace = true }
turbopack-core = { workspace = true }

#turbopack-binding = { workspace = true, features = [
#  "__turbo_tasks",
#  "__turbo_tasks_memory",
#  "__turbo_tasks_env",
#  "__turbo_tasks_fs",
#  "__turbo_tasks_memory",
#  "__turbopack",
#  "__turbopack_nodejs",
#  "__turbopack_core",
#  "__turbopack_browser",
#  "__turbopack_ecmascript",
#  "__turbopack_ecmascript_runtime",
#  "__turbopack_env",
#  "__turbopack_node",
#] }

[build-dependencies]
turbo-tasks-build = { workspace = true }
vergen = { version = "7.3.2", default-features = false, features = [
  "cargo",
  "build",
] }
