[package]
name = "next-build"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
next-core = { workspace = true }
turbopack-core = { workspace = true }
turbo-rcstr = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
