[package]
name = "next-dev-tests"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

# don't publish this crate
publish = false

[dev-dependencies]
anyhow = "1.0.47"
chromiumoxide = { version = "0.4.0", features = [
  "tokio-runtime",
], default-features = false }
futures = "0.3.25"
httpmock = { version = "0.6.6", features = ["standalone"] }
lazy_static = "1.4.0"
mime = "0.3.16"
next-core = { path = "../next-core" }
next-dev = { path = "../next-dev" }
once_cell = "1.13.0"
owo-colors = "3"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.6.0"
serde = "1.0.136"
serde_json = "1.0.85"
test-generator = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
# For matching on errors from chromiumoxide. Keep in
# sync with chromiumoxide's tungstenite requirement.
tungstenite = "0.17.3"
turbo-malloc = { path = "../turbo-malloc", default-features = false, features = [
  "custom_allocator",
] }
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }
turbo-tasks-memory = { path = "../turbo-tasks-memory" }
turbo-tasks-testing = { path = "../turbo-tasks-testing" }
turbopack-cli-utils = { path = "../turbopack-cli-utils" }
turbopack-core = { path = "../turbopack-core" }
turbopack-dev-server = { path = "../turbopack-dev-server" }
turbopack-node = { path = "../turbopack-node" }
url = "2.2.2"
webbrowser = "0.7.1"

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
