[package]
name = "next-dev"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "next-dev"
path = "src/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "mod"
harness = false

[features]
tokio_console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "turbo-tasks/tokio_tracing",
]

[dependencies]
anyhow = "1.0.47"
clap = { version = "3", features = ["derive"] }
console-subscriber = { version = "0.1.6", optional = true }
futures = "0.3.21"
mime = "0.3.16"
next-core = { path = "../next-core" }
owo-colors = "3"
portpicker = "0.1.1"
serde = "1.0.136"
serde_json = "1.0.85"
tokio = { version = "1.11.0", features = ["full"] }
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }
turbo-tasks-memory = { path = "../turbo-tasks-memory" }
turbopack = { path = "../turbopack" }
turbopack-cli-utils = { path = "../turbopack-cli-utils" }
turbopack-core = { path = "../turbopack-core" }
turbopack-dev-server = { path = "../turbopack-dev-server" }
url = "2.3.0"
webbrowser = "0.7.1"

[dev-dependencies]
chromiumoxide = { version = "0.3.5", features = [
  "tokio-runtime",
], default-features = false }
criterion = { version = "0.3.5", features = ["async_tokio"] }
fs_extra = "1.2.0"
lazy_static = "1.4.0"
once_cell = "1.13.0"
regex = "1.6.0"
tempfile = "3.3.0"
test-generator = "0.3.0"
# sync with chromiumoxide's tungstenite requirement.
tungstenite = "0.17.3"                                                # For matching on errors from chromiumoxide. Keep in 
turbopack-create-test-app = { path = "../turbopack-create-test-app" }

[target.'cfg(unix)'.dev-dependencies]
nix = "0.25.0"

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
