[package]
name = "next-dev"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "next-dev"
path = "src/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "mod"
harness = false

[features]
# By default, we enable native-tls for reqwest downstream trasntive features.
# This is for the convinience for all of daily dev workflow i.e running
# `cargo xxx` without explicitly specifying features, not that we want to
# promote this as default backend. Actual configuration is done when build next-swc,
# and also turbopack standalone when we have it.
default = ["cli", "custom_allocator", "native-tls"]
cli = ["clap"]
serializable = []
tokio_console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "turbo-tasks/tokio_tracing",
]
profile = []
custom_allocator = ["turbo-malloc/custom_allocator"]
next-font-local = ["next-core/next-font-local"]
native-tls = ["next-core/native-tls"]
rustls-tls = ["next-core/rustls-tls"]

[dependencies]
anyhow = { version = "1.0.47", features = ["backtrace"] }
clap = { version = "4.0.18", features = ["derive", "env"], optional = true }
console-subscriber = { version = "0.1.8", optional = true }
futures = "0.3.25"
mime = "0.3.16"
next-core = { path = "../next-core" }
owo-colors = "3"
serde = "1.0.136"
tokio = { version = "1.21.2", features = ["full"] }
turbo-malloc = { path = "../turbo-malloc", default-features = false }
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }
turbo-tasks-memory = { path = "../turbo-tasks-memory" }
turbopack-cli-utils = { path = "../turbopack-cli-utils" }
turbopack-core = { path = "../turbopack-core" }
turbopack-dev-server = { path = "../turbopack-dev-server" }
turbopack-node = { path = "../turbopack-node" }
webbrowser = "0.7.1"

[dev-dependencies]
chromiumoxide = { version = "0.4.0", features = [
  "tokio-runtime",
], default-features = false }
criterion = { version = "0.4.0", features = ["async_tokio"] }
once_cell = "1.13.0"
parking_lot = "0.12.1"
portpicker = "0.1.1"
rand = "0.8.5"
regex = "1.6.0"
serde_json = "1.0.85"
tempfile = "3.3.0"
# For matching on errors from chromiumoxide. Keep in
# sync with chromiumoxide's tungstenite requirement.
tungstenite = "0.17.3"
turbo-tasks-testing = { path = "../turbo-tasks-testing" }
turbopack-create-test-app = { path = "../turbopack-create-test-app" }
url = "2.2.2"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.25.0"

[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
vergen = { version = "7.3.2", default-features = false, features = [
  "cargo",
  "build",
] }
