[package]
name = "next-transform-dynamic"
version = "0.1.0"
description = "SWC transform for next/dynamic"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[dependencies]
pathdiff = { workspace = true }

swc_core = { workspace = true, features = [
  "ecma_ast",
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_quote",
  "ecma_visit",
  "ecma_utils",
  "testing",
  "base",
] }

[dev-dependencies]
swc_core = { workspace = true, features = ["testing_transform"] }
testing = { workspace = true }
