[package]
name = "pidlock"
version = "0.1.4"
authors = ["Paul Hummer <paul@eventuallyanyway.com>"]
license = "MIT"
edition = "2021"
description = "A library for using pidfiles as resource locks"
repository = "https://github.com/rockstar/pidlock"
keywords = ["pidfile", "file", "filelock", "server", "lock"]
categories = ["filesystem"]
readme = "README.md"
include = [
  "src/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[features]
default = ["strict"]
strict = []          # Warnings are errors

[dependencies]
libc = "0.2.40"
log = "0.4.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[dev-dependencies]
rand = "0.8.2"
tempdir = "0.3.7"

[badges]
circle-ci = { repository = "rockstar/pidlock", branch = "master" }
